# trd-hackathon

./: .gitattributes  .gitignore  .pre-commit-config.yaml  DATA_MANAGEMENT.md  LICENSE  Makefile  README.md  ai_assistant.py  api_demo.md  api_server.py  extract_car_gps.py  extract_car_telemetry_50percent.py  project_research_analysis.md  pyproject.toml  racing_agent.py  telemetry_augmentation.py  test_agent.py  test_agent_positions.py  test_comprehensive_lap_fix.py  test_final_fix.py  test_lap_based_positions.py  test_lap_extraction.py  test_positions.py
docs/: guide_lines_target.txt  suggestion_by_comany.txt
models/: barber_race1_bundle.pkl  barber_race1_models.pkl  barber_race2_models.pkl  cota_race1_models.pkl  cota_race2_models.pkl  lap_time_predictor_barber_race1.pkl  sebring_race1_models.pkl  sebring_race2_models.pkl  sonoma_race1_models.pkl  sonoma_race2_models.pkl  tire_degradation_barber_race1.pkl  vir_race1_models.pkl  vir_race2_models.pkl
notebooks/: 01_data_exploration.ipynb  02_lap_time_prediction.ipynb  03_pre_season_train_models_all_tracks.ipynb  04_telemetry_data_exploration.ipynb
notebooks/models/: barber_race1_models.pkl  barber_race2_models.pkl  cota_race1_models.pkl  cota_race2_models.pkl  indianapolis_race1_models.pkl  indianapolis_race2_models.pkl  road_america_race1_models.pkl  road_america_race2_models.pkl  sebring_race1_models.pkl  sebring_race2_models.pkl  sonoma_race1_models.pkl  sonoma_race2_models.pkl  vir_race1_models.pkl  vir_race2_models.pkl
race_replay/: R2_sample_telemetry.csv  README.md  clear-cache.html  gr_cup_track_info.csv  index-api.html  index.html  serve.py  track-map-api.js  track-map.js  track-map.js.gps-only-backup
race_replay/car_data/barber/: R1_GR86-002-000_gps.csv  R1_GR86-004-78_gps.csv  R1_GR86-004-78_telemetry_50percent.csv  R1_GR86-006-7_gps.csv  R1_GR86-010-16_gps.csv  R1_GR86-013-80_gps.csv  R1_GR86-013-80_telemetry_50percent.csv  R1_GR86-015-31_gps.csv  R1_GR86-016-55_gps.csv  R1_GR86-022-13_gps.csv  R1_GR86-025-47_gps.csv  R1_GR86-026-72_gps.csv  R1_GR86-030-18_gps.csv  R1_GR86-033-46_gps.csv  R1_GR86-036-98_gps.csv  R1_GR86-038-93_gps.csv  R1_GR86-040-3_gps.csv  R1_GR86-047-21_gps.csv  R1_GR86-049-88_gps.csv  R1_GR86-060-2_gps.csv  R1_GR86-063-113_gps.csv  R1_GR86-065-5_gps.csv  R2_GR86-002-000_gps.csv  R2_GR86-004-78_telemetry_50percent.csv  R2_GR86-006-7_gps.csv  R2_GR86-010-16_gps.csv  R2_GR86-013-80_gps.csv  R2_GR86-013-80_telemetry_50percent.csv  R2_GR86-015-31_gps.csv  R2_GR86-016-55_gps.csv  R2_GR86-022-13_gps.csv  R2_GR86-025-47_gps.csv  R2_GR86-026-72_gps.csv  R2_GR86-030-18_gps.csv  R2_GR86-033-46_gps.csv  R2_GR86-036-98_gps.csv  R2_GR86-038-93_gps.csv  R2_GR86-040-3_gps.csv  R2_GR86-047-21_gps.csv  R2_GR86-049-88_gps.csv  (+3 more)
src/toyota_gr_cup_analytics/: __init__.py  cli.py
src/toyota_gr_cup_analytics/analysis/: __init__.py  lap_analysis.py  performance_metrics.py  telemetry_analysis.py  weather_analysis.py
src/toyota_gr_cup_analytics/data_processing/: __init__.py  loaders.py  preprocessors.py  transformers.py
src/toyota_gr_cup_analytics/models/: __init__.py  feature_engineering.py  model_persistence.py  optimization.py  predictive.py  strategy.py
src/toyota_gr_cup_analytics/visualization/: __init__.py  charts.py  dashboards.py  plots.py
tests/: __init__.py
tests/unit/: test_data_loading.py
