[project]
name = "toyota-gr-cup-analytics"
version = "0.1.0"
description = "Toyota GR Cup Racing Data Analytics - Real-time race strategy optimization and performance analysis"
# readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "TRD Hackathon Team", email = "team@trd-hackathon.com"},
]
keywords = ["racing", "analytics", "motorsports", "toyota", "gr-cup", "telemetry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core data processing
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "polars>=0.19.0",
    # Machine learning
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    "lightgbm>=4.0.0",
    # Visualization and dashboards
    "plotly>=5.15.0",
    "dash>=2.14.0",
    "streamlit>=1.28.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # Statistical analysis
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    # Configuration and utilities
    "pydantic>=2.4.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    # Performance
    "numba>=0.58.0",
    "joblib>=1.3.0",
    "pillow>=12.0.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "boto3>=1.40.75",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "hypothesis>=6.82.0",

    # Code quality
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",

    # Documentation
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.1.0",
    "plotly-express>=0.4.0",
]

[project.scripts]
gr-analytics = "toyota_gr_cup_analytics.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/trd-hackathon"
Repository = "https://github.com/your-username/trd-hackathon.git"
Issues = "https://github.com/your-username/trd-hackathon/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toyota_gr_cup_analytics"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "hypothesis>=6.82.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.1.0",
    "plotly-express>=0.4.0",
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/toyota_gr_cup_analytics",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=30"
]

[tool.coverage.run]
source = ["src/toyota_gr_cup_analytics"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
